@@ -1,6 +1,10 @@
 * Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.4.2-0
 - Add the missing puppetlabs/inifile dependency to the metadata.json
 - Fixed puppet lint problem
+- pupmod::master::simp_auth
+  - Allow tweaking `allow` and `deny` rules for supported keydist auth rules
+  - Removed Mcollective auth rules
+  - changed `$pki_cacerts_all`'s auth rule from `*` to `certname`
 
 * Mon Oct 02 2017 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.4.1-0
 - Fixed bug where `:selinux_config_mode` is tested even when `:selinux` is
